update control path

--- a/includes/page-create-controls.html
+++ b/includes/page-create-controls.html
@@ -9,7 +9,7 @@
     </div>
     <div class="carousels"></div>
     <div class="options">
-        <a id="cancel-option" href="#"><img src="/img/cancel-icon.png" /></a>
-        <a id="accept-option" href="#"><img src="/img/accept-icon.png" /></a>
+        <a id="cancel-option" href="#"><img src="./img/cancel-icon.png" /></a>
+        <a id="accept-option" href="#"><img src="./img/accept-icon.png" /></a>
     </div>
 </aside>
