--- a/scss/stylesheet.scss
+++ b/scss/stylesheet.scss
@@ -238,6 +238,7 @@ body {
                 font-size: 44px;
                 font-weight: normal;
                 margin: 0;
+                padding: 0 0 16px;
             }
             .email {
                 padding: 36px 0;
@@ -527,7 +528,20 @@ body {
             position: absolute;
             width: 100%;
 
-            > div { position: relative; }
+            > div { 
+                position: relative;
+                
+                &[data-selected="true"]:before {
+                    content: '';
+                    display: block;
+                    background-image: url('../img/selected.png');
+                    position: absolute;
+                    width: 34px;
+                    height: 34px;
+                    top: calc(50% - 17px);
+                    left: calc(50% - 17px);
+                }
+            }
 
             .panel-a    { grid-column: 1 / 2; grid-row: 1 / 1; }
             .panel-b    { grid-column: 2 / 3; grid-row: 1 / 1; }
