--- a/css/stylesheet.css
+++ b/css/stylesheet.css
@@ -1,6 +1,7 @@
 body {
   background-color: #37312d;
   font-family: 'helvetica-light';
+  overflow-x: hidden;
   /* 12-grid system */ }
   body nav {
     align-items: center;
@@ -582,10 +583,50 @@ body {
       height: 30px;
       vertical-align: top;
       width: 30px; }
-  body .lity {
-    pointer-events: none; }
-    body .lity > * {
-      pointer-events: all; }
+  body #popup {
+    display: none; }
+    body #popup[aria-hidden="false"] {
+      display: flex;
+      position: fixed;
+      top: 0;
+      right: 0;
+      bottom: 0;
+      left: 0;
+      z-index: 1; }
+      body #popup[aria-hidden="false"]:before {
+        content: '';
+        background-color: rgba(0, 0, 0, 0.75);
+        pointer-events: none;
+        display: block;
+        position: fixed;
+        top: 0;
+        right: 0;
+        bottom: 0;
+        left: 0;
+        z-index: 1; }
+    body #popup .popup-content {
+      width: 480px;
+      max-width: 100%;
+      margin: auto;
+      padding: 0 12px;
+      position: relative;
+      text-align: right;
+      z-index: 1; }
+      body #popup .popup-content .image {
+        padding-bottom: 50vh;
+        margin-bottom: 12px; }
+      body #popup .popup-content .text {
+        color: #fff;
+        font-family: 'Roboto Condensed', sans-serif;
+        font-weight: 300;
+        text-align: left; }
+      body #popup .popup-content .btn {
+        margin: 8px 0 0 8px; }
+        body #popup .popup-content .btn.cancel {
+          background-color: transparent; }
+          body #popup .popup-content .btn.cancel:hover, body #popup .popup-content .btn.cancel:focus {
+            box-shadow: none;
+            color: #fff; }
 
 @media (max-width: 980px) {
   body nav #toggle-menu {
