--- a/scss/stylesheet.scss
+++ b/scss/stylesheet.scss
@@ -1,6 +1,7 @@
 body {
     background-color: #37312d;
     font-family: 'helvetica-light';
+    overflow-x: hidden;
 
     nav {
         align-items: center;
@@ -600,11 +601,62 @@ body {
         }
     }
 
-    .lity {
-        pointer-events: none;
+    #popup {
+        display: none;
 
-        > * {
-            pointer-events: all;
+        &[aria-hidden="false"]{
+            display: flex;
+            position: fixed;
+            top: 0;
+            right: 0;
+            bottom: 0;
+            left: 0;
+            z-index: 1;
+
+            &:before { 
+                content: '';
+                background-color: rgba(0, 0, 0, 0.75);
+                pointer-events: none;
+                display: block;
+                position: fixed;
+                top: 0;
+                right: 0;
+                bottom: 0;
+                left: 0;
+                z-index: 1;
+            }
+        }
+
+        .popup-content {
+            width: 480px;
+            max-width: 100%;
+            margin: auto;
+            padding: 0 12px;
+            position: relative;
+            text-align: right;
+            z-index: 1;
+
+            .image { 
+                padding-bottom: 50vh;
+                margin-bottom: 12px;
+            }
+            .text { 
+                color: #fff;
+                font-family: 'Roboto Condensed', sans-serif;
+                font-weight: 300;
+                text-align: left;
+            }
+            .btn { 
+                margin: 8px 0 0 8px;
+                &.cancel { 
+                    background-color: transparent;
+
+                    &:hover, &:focus { 
+                        box-shadow: none; 
+                        color: #fff;
+                    }
+                }
+            }
         }
     }
 }
