update texture when selected

--- a/includes/page-create.html
+++ b/includes/page-create.html
@@ -11,31 +11,31 @@
         <div class="col-6">
             <div class="palette">
                 <div class="grid">
-                    <div class="panel-a">
+                    <div class="panel-a" data-group="panel-a">
                         <div class="caption">
                             <span class="label">panel a</span>
                             <span class="title">error</span>
                         </div>
                     </div>
-                    <div class="panel-b">
+                    <div class="panel-b" data-group="panel-b">
                         <div class="caption">
                             <span class="label">panel b</span>
                             <span class="title">error</span>
                         </div>
                     </div>
-                    <div class="couch">
+                    <div class="couch" data-group="couch">
                         <div class="caption">
                             <span class="label">couch</span>
                             <span class="title">error</span>
                         </div>
                     </div>
-                    <div class="cabinet">
+                    <div class="cabinet" data-group="cabinet">
                         <div class="caption">
                             <span class="label">cabinet interior</span>
                             <span class="title">error</span>
                         </div>
                     </div>
-                    <div class="headboard">
+                    <div class="headboard" data-group="headboard">
                         <div class="caption">
                             <span class="label">headboard</span>
                             <span class="title">error</span>
