--- a/scss/stylesheet.scss
+++ b/scss/stylesheet.scss
@@ -498,6 +498,7 @@ body {
 		position: relative;
 		width: 100%;
 
+		&.editing { cursor: pointer; }
 		&.small {
 			box-sizing: border-box;
 			padding-left: 5%;
