--- a/css/stylesheet.css
+++ b/css/stylesheet.css
@@ -364,7 +364,8 @@ body {
               padding: 4%;
               color: inherit;
               text-decoration: none; }
-              body aside.controls .carousels .owl-carousel .item .thumb[data-selected="true"] .image:before {
+              body aside.controls .carousels .owl-carousel .item .thumb[data-selected="true"] .image:before,
+              body aside.controls .carousels .owl-carousel .item .thumb .image:hover:before {
                 content: '';
                 display: block;
                 background-image: url("../img/selected.png");
