--- a/scss/stylesheet.scss
+++ b/scss/stylesheet.scss
@@ -295,6 +295,26 @@ body {
 				margin: 0;
 			}
 		}
+
+		&.solution {
+			color: #ffffff;
+			padding: 128px 0;
+			text-align: center;
+
+			h1 { 
+				font-weight: normal;
+				font-size: 44px;
+				margin: 0;
+				padding: 24px 12px 0;
+			}
+			p { 
+				font-size: 15px;
+				line-height: 25px;
+				max-width: 600px;
+				margin: auto;
+				padding: 0px 12px 24px;
+			}
+		}
 	}
 
 	aside {
