--- a/includes/page-solution.html
+++ b/includes/page-solution.html
@@ -10,3 +10,27 @@
         </div>
     </div>
 </article>
+<header class="solution">
+    <div class="owl-carousel owl-theme">
+        <div class="slide-1"></div>
+        <div class="slide-2">
+            <div class="caption arrow">Store your couch cushions here at night.</div>
+        </div>
+        <div class="slide-3">
+            <div class="caption arrow">Store your bolster here</div>
+        </div>
+        <div class="slide-4"></div>
+        <div class="slide-5"></div>
+        <div class="slide-5-2"></div>
+        <div class="slide-6">
+            <div class="caption arrow">The ultra suede bolster will match the headboard color you choose</div>
+        </div>
+        <div class="slide-7"></div>
+        <div class="slide-8">
+            <div class="caption">Pleanty of closet storage for you or a guest</div>
+        </div>
+        <div class="slide-9">
+            <div class="caption">Lots of storage based on the custom configuration to best fit your room</div>
+        </div>
+    </div>
+</header>
