--- a/includes/page-solution.html
+++ b/includes/page-solution.html
@@ -34,3 +34,13 @@
         </div>
     </div>
 </header>
+<article class="solution storage">
+    <div class="left-image"></div>
+    <div class="text">
+        <div>
+            <h1>oh, so much<br>storage</h1>
+            <p>No need to sacrifice storage for luxury and style. With SonnoVita you can have both. There’s even a hidden chest perfectly designed to store bedding.</p>
+        </div>
+    </div>
+    <div class="right-image"></div>
+</article>
