--- a/includes/page-solution.html
+++ b/includes/page-solution.html
@@ -44,3 +44,12 @@
     </div>
     <div class="right-image"></div>
 </article>
+<article class="solution configurations">
+    <h1>configurations</h1>
+    <p>Think about your room. Then pick the configuration that best fits your design.</p>
+    <div class="graphics">
+        <img src="./img/couch-1.png" />
+        <img src="./img/couch-2.png" />
+        <img src="./img/couch-3.png" />
+    </div>
+</article>
