--- a/includes/page-solution.html
+++ b/includes/page-solution.html
@@ -53,3 +53,20 @@
         <img src="./img/couch-3.png" />
     </div>
 </article>
+<article class="solution customize">
+    <div class="patterns">
+        <div class="texture panels melted-chocolate"></div>
+        <div class="texture panels snow-trees"></div>
+        <div class="texture couches saddle"></div>
+        <div class="texture panels parchment"></div>
+        <div class="texture couches eugene-slate"></div>
+        <div class="texture headboards chocolate"></div>
+    </div>
+    <div class="text">
+        <div>
+            <h1>select or customize a color scheme</h1>
+            <p> From upscle luxury to urban chic SonnoVita offers over 25 elegant color schemes. Plus you can create your own customized color scheme to perfectly match your taste.</p>
+            <a class="btn" href="schemes.html">select your color scheme</a>
+        </div>
+    </div>
+</article>
