--- a/includes/page-solution.html
+++ b/includes/page-solution.html
@@ -65,8 +65,14 @@
     <div class="text">
         <div>
             <h1>select or customize a color scheme</h1>
-            <p> From upscle luxury to urban chic SonnoVita offers over 25 elegant color schemes. Plus you can create your own customized color scheme to perfectly match your taste.</p>
+            <p>From upscle luxury to urban chic SonnoVita offers over 25 elegant color schemes. Plus you can create your own customized color scheme to perfectly match your taste.</p>
             <a class="btn" href="schemes.html">select your color scheme</a>
         </div>
     </div>
+</article>
+<article class="solution contact">
+    <h1>see what we can build for you</h1>
+    <p>browse our color schems or customize your own and see what we can build for you.</p>
+    <a class="btn" href="schemes.html">submit a color scheme</a>
+    <a class="btn" href="contact.html">contact us</a>
 </article>
