--- a/scss/stylesheet.scss
+++ b/scss/stylesheet.scss
@@ -455,6 +455,21 @@ body {
 					p { max-width: 320px; margin: auto; }
 				}
 			}
+			&.contact {
+				background-image: url('../img/solution-contact.jpg');
+				background-size: cover;
+				background-position: center;
+				margin-bottom: 48px;
+				padding: 96px 12px;
+
+				h1 { padding-bottom: 12px; }
+				.btn {
+					color: #37312d;
+					background-color: rgba(255, 255, 255, 0.3);
+					padding: 18px 48px;
+					margin: 12px;
+				}
+			}
 		}
 	}
 
@@ -932,11 +947,6 @@ body {
 				&.storage {
 					> * { width: 100% !important; min-height: initial; background-attachment: fixed; }
 					.left-image, .right-image { height: 50vh; }
-				}
-				&.configurations {
-					.graphics {
-						img { }
-					}
 				}
 				&.customize {
 					.patterns { width: 100%; }
