--- a/css/textures.css
+++ b/css/textures.css
@@ -18,13 +18,10 @@
 .cabinets.natural-maple { background-image: url("../img/textures/cabinets/natural-maple.jpg"); }
 .cabinets.norwegian-maple { background-image: url("../img/textures/cabinets/norwegian-maple.jpg"); }
 .cabinets.rainier-white { background-image: url("../img/textures/cabinets/rainier-white.jpg"); }
-.cabinets.ranier-white { background-image: url("../img/textures/cabinets/ranier-white.jpg"); }
+.cabinets.shaker-cherry { background-image: url("../img/textures/cabinets/shaker-cherry.jpg"); }
 .cabinets.silver-frost { background-image: url("../img/textures/cabinets/silver-frost.jpg"); }
-.cabinets.slate { background-image: url("../img/textures/cabinets/slate.jpg"); }
 .cabinets.summit { background-image: url("../img/textures/cabinets/summit.jpg"); }
 .cabinets.wild-apple { background-image: url("../img/textures/cabinets/wild-apple.jpg"); }
-.cabinets.wilsonart-designer-white { background-image: url("../img/textures/cabinets/wilsonart-designer-white.jpg"); }
-.cabinets.wilsonart-shaker-cherry { background-image: url("../img/textures/cabinets/wilsonart-shaker-cherry.jpg"); }
 .couches.black { background-image: url("../img/textures/couches/black.jpg"); }
 .couches.bourbon { background-image: url("../img/textures/couches/bourbon.jpg"); }
 .couches.brick { background-image: url("../img/textures/couches/brick.jpg"); }
@@ -32,17 +29,15 @@
 .couches.brooklyn-creme-brulee { background-image: url("../img/textures/couches/brooklyn-creme-brulee.jpg"); }
 .couches.brooklyn-fog { background-image: url("../img/textures/couches/brooklyn-fog.jpg"); }
 .couches.casablanca-smoke { background-image: url("../img/textures/couches/casablanca-smoke.jpg"); }
-.couches.cetus-bourbon { background-image: url("../img/textures/couches/cetus-bourbon.jpg"); }
 .couches.cetus-cielo { background-image: url("../img/textures/couches/cetus-cielo.jpg"); }
 .couches.cetus-granite { background-image: url("../img/textures/couches/cetus-granite.jpg"); }
 .couches.cetus-nuvolo { background-image: url("../img/textures/couches/cetus-nuvolo.jpg"); }
 .couches.cetus-pebble { background-image: url("../img/textures/couches/cetus-pebble.jpg"); }
-.couches.cetus-slate { background-image: url("../img/textures/couches/cetus-slate.jpg"); }
 .couches.cetus-smoke { background-image: url("../img/textures/couches/cetus-smoke.jpg"); }
 .couches.chalk { background-image: url("../img/textures/couches/chalk.jpg"); }
 .couches.charlott { background-image: url("../img/textures/couches/charlott.jpg"); }
 .couches.chocolate { background-image: url("../img/textures/couches/chocolate.jpg"); }
-.couches.clowd { background-image: url("../img/textures/couches/clowd.jpg"); }
+.couches.cloud { background-image: url("../img/textures/couches/cloud.jpg"); }
 .couches.dante-spice { background-image: url("../img/textures/couches/dante-spice.jpg"); }
 .couches.deer-run-lilac { background-image: url("../img/textures/couches/deer-run-lilac.jpg"); }
 .couches.eugene-sabia { background-image: url("../img/textures/couches/eugene-sabia.jpg"); }
@@ -61,10 +56,8 @@
 .couches.pink-elmanordic { background-image: url("../img/textures/couches/pink-elmanordic.jpg"); }
 .couches.purple-elmanordic { background-image: url("../img/textures/couches/purple-elmanordic.jpg"); }
 .couches.raspberry { background-image: url("../img/textures/couches/raspberry.jpg"); }
-.couches.regent-modern-gray { background-image: url("../img/textures/couches/regent-modern-gray.jpg"); }
 .couches.regent-sand { background-image: url("../img/textures/couches/regent-sand.jpg"); }
 .couches.saddle { background-image: url("../img/textures/couches/saddle.jpg"); }
-.couches.slate { background-image: url("../img/textures/couches/slate.jpg"); }
 .couches.tumbleweed { background-image: url("../img/textures/couches/tumbleweed.jpg"); }
 .headboards.aubergine { background-image: url("../img/textures/headboards/aubergine.jpg"); }
 .headboards.bittersweet { background-image: url("../img/textures/headboards/bittersweet.jpg"); }
@@ -80,7 +73,6 @@
 .headboards.chocolate { background-image: url("../img/textures/headboards/chocolate.jpg"); }
 .headboards.cinnabar { background-image: url("../img/textures/headboards/cinnabar.jpg"); }
 .headboards.citron { background-image: url("../img/textures/headboards/citron.jpg"); }
-.headboards.cloud { background-image: url("../img/textures/headboards/cloud.jpg"); }
 .headboards.coffee { background-image: url("../img/textures/headboards/coffee.jpg"); }
 .headboards.copper { background-image: url("../img/textures/headboards/copper.jpg"); }
 .headboards.cream { background-image: url("../img/textures/headboards/cream.jpg"); }
@@ -127,34 +119,23 @@
 .headboards.violet { background-image: url("../img/textures/headboards/violet.jpg"); }
 .headboards.white { background-image: url("../img/textures/headboards/white.jpg"); }
 .headboards.wine { background-image: url("../img/textures/headboards/wine.jpg"); }
-.panels.ascott { background-image: url("../img/textures/panels/ascott.jpg"); }
 .panels.bankers-gray { background-image: url("../img/textures/panels/bankers-gray.jpg"); }
-.panels.black-hole { background-image: url("../img/textures/panels/black-hole.jpg"); }
-.panels.black-on-black { background-image: url("../img/textures/panels/black-on-black.jpg"); }
-.panels.black-tie { background-image: url("../img/textures/panels/black-tie.jpg"); }
 .panels.bronze-linen { background-image: url("../img/textures/panels/bronze-linen.jpg"); }
 .panels.brushed-steel { background-image: url("../img/textures/panels/brushed-steel.jpg"); }
 .panels.bubble-gum-crok { background-image: url("../img/textures/panels/bubble-gum-crok.jpg"); }
 .panels.butter-cream { background-image: url("../img/textures/panels/butter-cream.jpg"); }
 .panels.candy-apple { background-image: url("../img/textures/panels/candy-apple.jpg"); }
 .panels.carbon { background-image: url("../img/textures/panels/carbon.jpg"); }
-.panels.carbon-black { background-image: url("../img/textures/panels/carbon-black.jpg"); }
-.panels.carbon-new { background-image: url("../img/textures/panels/carbon-new.jpg"); }
-.panels.chantilly-gray { background-image: url("../img/textures/panels/chantilly-gray.jpg"); }
 .panels.cottage { background-image: url("../img/textures/panels/cottage.jpg"); }
 .panels.drift-cloth { background-image: url("../img/textures/panels/drift-cloth.jpg"); }
 .panels.earth { background-image: url("../img/textures/panels/earth.jpg"); }
 .panels.french-roast { background-image: url("../img/textures/panels/french-roast.jpg"); }
-.panels.glacier { background-image: url("../img/textures/panels/glacier.jpg"); }
 .panels.glass-drift { background-image: url("../img/textures/panels/glass-drift.jpg"); }
-.panels.glass-wenge { background-image: url("../img/textures/panels/glass-wenge.jpg"); }
 .panels.gotham-stone { background-image: url("../img/textures/panels/gotham-stone.jpg"); }
 .panels.graphite-reign { background-image: url("../img/textures/panels/graphite-reign.jpg"); }
 .panels.gray-flannel { background-image: url("../img/textures/panels/gray-flannel.jpg"); }
 .panels.gray-mist { background-image: url("../img/textures/panels/gray-mist.jpg"); }
 .panels.key-lime-pie { background-image: url("../img/textures/panels/key-lime-pie.jpg"); }
-.panels.latte-trees { background-image: url("../img/textures/panels/latte-trees.jpg"); }
-.panels.linen-sail { background-image: url("../img/textures/panels/linen-sail.jpg"); }
 .panels.melted-chocolate { background-image: url("../img/textures/panels/melted-chocolate.jpg"); }
 .panels.midnight-crok { background-image: url("../img/textures/panels/midnight-crok.jpg"); }
 .panels.parchment { background-image: url("../img/textures/panels/parchment.jpg"); }
@@ -178,4 +159,3 @@
 .panels.sunset-brown { background-image: url("../img/textures/panels/sunset-brown.jpg"); }
 .panels.twisted-steel { background-image: url("../img/textures/panels/twisted-steel.jpg"); }
 .panels.urban-cowboy { background-image: url("../img/textures/panels/urban-cowboy.jpg"); }
-.panels.white-prism { background-image: url("../img/textures/panels/white-prism.jpg"); }
