update contact page

--- a/css/stylesheet.css
+++ b/css/stylesheet.css
@@ -450,6 +450,21 @@ body {
         background-color: rgba(255, 255, 255, 0.3);
         padding: 18px 48px;
         margin: 12px; }
+  body article.contact {
+    color: #ffffff;
+    padding: 128px 12px;
+    text-align: center; }
+    body article.contact h1 {
+      font-weight: normal;
+      font-size: 44px;
+      margin: 0;
+      padding: 24px 12px 0; }
+    body article.contact p {
+      font-size: 15px;
+      line-height: 25px;
+      max-width: 600px;
+      margin: auto;
+      padding: 0px 12px 24px; }
   body aside {
     font-family: 'Roboto Condensed', sans-serif; }
     body aside.controls {
